--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -79,7 +79,7 @@ and then construct a vector from cross spectra against all other imaging maps:
 \begin{equation}
 \hat{C}_{X, \ell} = [\hat{C}_{x_{1}, \ell}, \hat{C}_{x_{2}, \ell}, \hat{C}_{x_{3}, \ell}, ..., \hat{C}_{x_{9}, \ell}].
 \end{equation}
-The mean and standard deviation of $\hat{C}_{X, \ell}$ for 1000 mocks with and without $\fnl$ are shown in Fig. \ref{fig:clxmock}.  Finally, cross power spectrum $\chi^{2}$ can be defined as,
+We bin the $C_{X}$ measurements with $\ell$ edges defined at $2,  10,  18,  26,  40,  60,  80,~{\rm and}~100$. The mean and standard deviation of $\hat{C}_{X, \ell}$ for 1000 mocks with and without $\fnl$ are shown in Fig. \ref{fig:clxmock}.  Finally, cross power spectrum $\chi^{2}$ can be defined as,
 \begin{equation}
 \chi^{2} = C^{T}_{X, \ell} C^{-1} C_{X, \ell},
 \end{equation}
