--- a/sections/results.tex
+++ b/sections/results.tex
@@ -71,5 +71,25 @@ Nonlinear (Cons. II)	&42.845528	&42.682128	&42.255626&	42.360824&	36.203137&	48.
   \end{center}
 \end{table*}
 
+
+\begin{table*}
+  \begin{center}
+    \caption{Best fit and marginalized stats for $\fnl$ from fitting the power spectrum of DR9 LRGs after the nonlinear treatment with Conservative II.}
+    \label{tab:mocksmcmc}
+    \begin{tabular}{lcccccc}
+    \hline
+    \hline
+    & MAP [scipy] & MAP [chain]  &	Mean [chain]	& Median [chain] &	16th	& 84th \\
+    \hline
+BASS+MzLS&	21.249515&	21.157945&	14.725741&	17.215942&	-3.156691&	33.469937\\
+DECaLS North&	56.795210&	56.936222&	55.269142&	55.809133&	43.477820&	67.443802\\
+DECaLS South &	51.334244&	51.166450&	50.637556&	50.878139&	42.450484&	58.794574
+    \end{tabular}
+  \end{center}
+\end{table*}
+
+
+
+
 %
 %fNL = 100	100.853749	100.857356	100.856818	100.857763	100.306626	101.406558
