--- a/ms.tex
+++ b/ms.tex
@@ -1,3 +1,13 @@
+%%% TO DO
+% fit fnl=100 C_ell with cov from fnl=0 
+%--- include all depth maps + E[B-V]
+% make x-axis range the same in Fig 8
+% add best fit C_ell to Fig. 9
+% test with Hui's weights
+% test with Rongpu's weights
+% test with dropping lowest ell bin
+% check errors scaling with fsky.. sigma ~ 1/sqrt(fsky)
+% look into analytical covariance, e.g., Gaussian
 \documentclass[fleqn, usenatbib]{mnras}
 \usepackage{style} % the settings are all here 
 
