--- a/ms.tex
+++ b/ms.tex
@@ -1,13 +1,20 @@
 %%% TO DO
-% fit fnl=100 C_ell with cov from fnl=0 
-%--- include all depth maps + E[B-V]
-% make x-axis range the same in Fig 8
-% add best fit C_ell to Fig. 9
+% fit fnl=100 C_ell with cov from fnl=0 --> done
+% include all depth maps + E[B-V] --> running
+% make x-axis range the same in Fig 8 --> done
+% add best fit C_ell to Fig. 9 --> done
+% check errors scaling with fsky.. sigma ~ 1/sqrt(fsky)
 % test with Hui's weights
 % test with Rongpu's weights
 % test with dropping lowest ell bin
-% check errors scaling with fsky.. sigma ~ 1/sqrt(fsky)
+
 % look into analytical covariance, e.g., Gaussian
+% Mehdi,
+%
+%In the SV3 LRG selection, the TS density is ~800 deg^-2 (in the main selection, the LRG density is ~600 deg^-2). I think some additional cuts, by removing a few percents, we can improve the purity of the selection. It’s worth talking about that with Rongpu. As we have the spectro catalog, I think that it is clearly possible. 
+%
+%Christophe. 
+
 \documentclass[fleqn, usenatbib]{mnras}
 \usepackage{style} % the settings are all here 
 
