--- a/ms.tex
+++ b/ms.tex
@@ -1,13 +1,12 @@
 %%% TO DO
 % fit fnl=100 C_ell with cov from fnl=0 --> done
-% include all depth maps + E[B-V] --> running
+% include all depth maps + E[B-V] --> done
 % make x-axis range the same in Fig 8 --> done
 % add best fit C_ell to Fig. 9 --> done
 % check errors scaling with fsky.. sigma ~ 1/sqrt(fsky)
 % test with Hui's weights
 % test with Rongpu's weights
 % test with dropping lowest ell bin
-
 % look into analytical covariance, e.g., Gaussian
 % Mehdi,
 %
