--- a/ms.tex
+++ b/ms.tex
@@ -1,12 +1,11 @@
 %%% TO DO
-% fit fnl=100 C_ell with cov from fnl=0 --> done
-% include all depth maps + E[B-V] --> done
-% make x-axis range the same in Fig 8 --> done
-% add best fit C_ell to Fig. 9 --> done
-% check errors scaling with fsky.. sigma ~ 1/sqrt(fsky)
-% test with Hui's weights
-% test with Rongpu's weights
-% test with dropping lowest ell bin
+%For documentation purposes, here is the list of action items:
+%Use log(C_ell) instead of C_ell
+%if failed; we would use the fiducial covariance, and then adjust the covariance using the best fit.
+%Use Hui’s weights
+%Use Rongpu’s weights
+%Check the impact of dropping lowest ell bin, or in general, how it change as a function of l_min
+%Check the impact of applying a rigorous cut on pixel completeness.
 % look into analytical covariance, e.g., Gaussian
 % Mehdi,
 %
