--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -1,7 +1,7 @@
 % If you need two or more lines of authors, add an extra line using \newauthor
 \author[M. Rezaie et al.]{Mehdi Rezaie$^{1,2}$, Ashley J. Ross$^{3}$, Hee-Jong Seo$^{2}$,  Hui Kong$^{3}$,  Edmond Chaussidon$^{4}$,\newauthor
 Anna Porredon$^{3}$, Lado Samushia$^{1}$, Rongpu Zhou$^{5}$, Alex Krolewski$^{6,7,8}$, Arnaud de Mattia$^{4}$,\newauthor
- Florian Beutler$^{9}$, Christophe Yeche$^{4}$, Nathalie Palanque-Delabrouille$^{4,5}$,\newauthor
+Jose Bermejo$^{?}$, Florian Beutler$^{9}$, Christophe Yeche$^{4}$, Nathalie Palanque-Delabrouille$^{4,5}$,\newauthor
   Klaus Honscheid$^{3,10}$, and DESI Members
 %Will J. Percival$^{4,5,6}$,\newauthor Grant Merz$^{1}$, Reza Katebi$^{1}$, Razvan C. Bunescu$^{7}$,
 %Julian Bautista$^{8}$,
