--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -68,6 +68,12 @@ The integral of the galaxy density contrast $\delta$ on the footprint is bound t
 \end{equation}
 
 
+\begin{figure*}
+\centering
+\includegraphics[width=0.95\textwidth]{hist_cl.pdf}
+\caption{Distribution of the first bin power spectrum for $\fnl=0$ and $100$ mocks.}
+\end{figure*}
+
 \begin{figure}
 \centering
 \includegraphics[width=0.45\textwidth]{model_mock.pdf}
@@ -111,8 +117,8 @@ where the covariance matrix $C = < \delta_{X} \delta_{X}>$ is constructed from m
 
 \begin{figure*}
 \centering
-\includegraphics[width=0.45\textwidth]{clx_mocks.pdf}
-\includegraphics[width=0.45\textwidth]{nbar_mocks.pdf}
+\includegraphics[width=0.95\textwidth]{clx_mocks.pdf}
+\includegraphics[width=0.95\textwidth]{nbar_mocks.pdf}
 \caption{Residual systematic fluctuations of DR9 LRGs against imaging maps. Left: cross spectrum. Right: mean density contrast. Shades represent $1\sigma$ dispersion of 1000 clean mocks with and without $\fnl$.}\label{fig:clxmock}
 \end{figure*}
 
@@ -124,4 +130,4 @@ where the covariance matrix $C = < \delta_{X} \delta_{X}>$ is constructed from m
 \end{figure*}
 
 
-\clearpage
+%\clearpage
