--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -64,7 +64,7 @@ Next, we normalize $\omega^{\rm window}$ such that it is normalized to one at $\
 \subsubsection{Integral Constraint}
 The integral of the galaxy density contrast $\delta$ on the footprint is bound to zero, which is often referred to as the \textit{Integral Constraint}. We account for this effect in the modeling by,
 \begin{equation}
-     \hat{C}^{\rm model, IC}_{\ell} = \hat{C}^{\rm model}_{\ell} - \hat{C}^{\rm model}_{0} (\frac{\hat{C}^{\rm window}_{\ell}}{\hat{C}^{\rm window}_{0}})
+     \hat{C}^{\rm model, IC}_{\ell} = \hat{C}^{\rm model}_{\ell} - \hat{C}^{\rm model}_{\ell=0} (\frac{\hat{C}^{\rm window}_{\ell}}{\hat{C}^{\rm window}_{\ell=0}})
 \end{equation}
 
 
