--- a/refs.bib
+++ b/refs.bib
@@ -1,12 +1,42 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Mehdi Rezaie at 2022-09-12 14:07:38 -0400 
+%% Created for Mehdi Rezaie at 2022-10-19 11:25:17 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{gaiadr2,
+	author = {{Gaia Collaboration} and {Brown, A. G. A.} and {Vallenari, A.} and {Prusti, T.} and {de Bruijne, J. H. J.} and {Babusiaux, C.} and {Bailer-Jones, C. A. L.} and {Biermann, M.} and {Evans, D. W.} and {Eyer, L.} and {Jansen, F.} and {Jordi, C.} and {Klioner, S. A.} and {Lammers, U.} and {Lindegren, L.} and {Luri, X.} and {Mignard, F.} and {Panem, C.} and {Pourbaix, D.} and {Randich, S.} and {Sartoretti, P.} and {Siddiqui, H. I.} and {Soubiran, C.} and {van Leeuwen, F.} and {Walton, N. A.} and {Arenou, F.} and {Bastian, U.} and {Cropper, M.} and {Drimmel, R.} and {Katz, D.} and {Lattanzi, M. G.} and {Bakker, J.} and {Cacciari, C.} and {Casta\~neda, J.} and {Chaoul, L.} and {Cheek, N.} and {De Angeli, F.} and {Fabricius, C.} and {Guerra, R.} and {Holl, B.} and {Masana, E.} and {Messineo, R.} and {Mowlavi, N.} and {Nienartowicz, K.} and {Panuzzo, P.} and {Portell, J.} and {Riello, M.} and {Seabroke, G. M.} and {Tanga, P.} and {Th\'evenin, F.} and {Gracia-Abril, G.} and {Comoretto, G.} and {Garcia-Reinaldos, M.} and {Teyssier, D.} and {Altmann, M.} and {Andrae, R.} and {Audard, M.} and {Bellas-Velidis, I.} and {Benson, K.} and {Berthier, J.} and {Blomme, R.} and {Burgess, P.} and {Busso, G.} and {Carry, B.} and {Cellino, A.} and {Clementini, G.} and {Clotet, M.} and {Creevey, O.} and {Davidson, M.} and {De Ridder, J.} and {Delchambre, L.} and {Dell\'{}Oro, A.} and {Ducourant, C.} and {Fern\'andez-Hern\'andez, J.} and {Fouesneau, M.} and {Fr\'emat, Y.} and {Galluccio, L.} and {Garc\'{\i}a-Torres, M.} and {Gonz\'alez-N\'u\~nez, J.} and {Gonz\'alez-Vidal, J. J.} and {Gosset, E.} and {Guy, L. P.} and {Halbwachs, J.-L.} and {Hambly, N. C.} and {Harrison, D. L.} and {Hern\'andez, J.} and {Hestroffer, D.} and {Hodgkin, S. T.} and {Hutton, A.} and {Jasniewicz, G.} and {Jean-Antoine-Piccolo, A.} and {Jordan, S.} and {Korn, A. J.} and {Krone-Martins, A.} and {Lanzafame, A. C.} and {Lebzelter, T.} and {L\"offler, W.} and {Manteiga, M.} and {Marrese, P. M.} and {Mart\'{\i}n-Fleitas, J. M.} and {Moitinho, A.} and {Mora, A.} and {Muinonen, K.} and {Osinde, J.} and {Pancino, E.} and {Pauwels, T.} and {Petit, J.-M.} and {Recio-Blanco, A.} and {Richards, P. J.} and {Rimoldini, L.} and {Robin, A. C.} and {Sarro, L. M.} and {Siopis, C.} and {Smith, M.} and {Sozzetti, A.} and {S\"uveges, M.} and {Torra, J.} and {van Reeven, W.} and {Abbas, U.} and {Abreu Aramburu, A.} and {Accart, S.} and {Aerts, C.} and {Altavilla, G.} and {\'Alvarez, M. A.} and {Alvarez, R.} and {Alves, J.} and {Anderson, R. I.} and {Andrei, A. H.} and {Anglada Varela, E.} and {Antiche, E.} and {Antoja, T.} and {Arcay, B.} and {Astraatmadja, T. L.} and {Bach, N.} and {Baker, S. G.} and {Balaguer-N\'u\~nez, L.} and {Balm, P.} and {Barache, C.} and {Barata, C.} and {Barbato, D.} and {Barblan, F.} and {Barklem, P. S.} and {Barrado, D.} and {Barros, M.} and {Barstow, M. A.} and {Bartholom\'e Mu\~noz, S.} and {Bassilana, J.-L.} and {Becciani, U.} and {Bellazzini, M.} and {Berihuete, A.} and {Bertone, S.} and {Bianchi, L.} and {Bienaym\'e, O.} and {Blanco-Cuaresma, S.} and {Boch, T.} and {Boeche, C.} and {Bombrun, A.} and {Borrachero, R.} and {Bossini, D.} and {Bouquillon, S.} and {Bourda, G.} and {Bragaglia, A.} and {Bramante, L.} and {Breddels, M. A.} and {Bressan, A.} and {Brouillet, N.} and {Br\"usemeister, T.} and {Brugaletta, E.} and {Bucciarelli, B.} and {Burlacu, A.} and {Busonero, D.} and {Butkevich, A. G.} and {Buzzi, R.} and {Caffau, E.} and {Cancelliere, R.} and {Cannizzaro, G.} and {Cantat-Gaudin, T.} and {Carballo, R.} and {Carlucci, T.} and {Carrasco, J. M.} and {Casamiquela, L.} and {Castellani, M.} and {Castro-Ginard, A.} and {Charlot, P.} and {Chemin, L.} and {Chiavassa, A.} and {Cocozza, G.} and {Costigan, G.} and {Cowell, S.} and {Crifo, F.} and {Crosta, M.} and {Crowley, C.} and {Cuypers+, J.} and {Dafonte, C.} and {Damerdji, Y.} and {Dapergolas, A.} and {David, P.} and {David, M.} and {de Laverny, P.} and {De Luise, F.} and {De March, R.} and {de Martino, D.} and {de Souza, R.} and {de Torres, A.} and {Debosscher, J.} and {del Pozo, E.} and {Delbo, M.} and {Delgado, A.} and {Delgado, H. E.} and {Di Matteo, P.} and {Diakite, S.} and {Diener, C.} and {Distefano, E.} and {Dolding, C.} and {Drazinos, P.} and {Dur\'an, J.} and {Edvardsson, B.} and {Enke, H.} and {Eriksson, K.} and {Esquej, P.} and {Eynard Bontemps, G.} and {Fabre, C.} and {Fabrizio, M.} and {Faigler, S.} and {Falc\~ao, A. J.} and {Farr\`as Casas, M.} and {Federici, L.} and {Fedorets, G.} and {Fernique, P.} and {Figueras, F.} and {Filippi, F.} and {Findeisen, K.} and {Fonti, A.} and {Fraile, E.} and {Fraser, M.} and {Fr\'ezouls, B.} and {Gai, M.} and {Galleti, S.} and {Garabato, D.} and {Garc\'{\i}a-Sedano, F.} and {Garofalo, A.} and {Garralda, N.} and {Gavel, A.} and {Gavras, P.} and {Gerssen, J.} and {Geyer, R.} and {Giacobbe, P.} and {Gilmore, G.} and {Girona, S.} and {Giuffrida, G.} and {Glass, F.} and {Gomes, M.} and {Granvik, M.} and {Gueguen, A.} and {Guerrier, A.} and {Guiraud, J.} and {Guti\'errez-S\'anchez, R.} and {Haigron, R.} and {Hatzidimitriou, D.} and {Hauser, M.} and {Haywood, M.} and {Heiter, U.} and {Helmi, A.} and {Heu, J.} and {Hilger, T.} and {Hobbs, D.} and {Hofmann, W.} and {Holland, G.} and {Huckle, H. E.} and {Hypki, A.} and {Icardi, V.} and {Jan\ss{}en, K.} and {Jevardat de Fombelle, G.} and {Jonker, P. G.} and {Juh\'asz, \'A. L.} and {Julbe, F.} and {Karampelas, A.} and {Kewley, A.} and {Klar, J.} and {Kochoska, A.} and {Kohley, R.} and {Kolenberg, K.} and {Kontizas, M.} and {Kontizas, E.} and {Koposov, S. E.} and {Kordopatis, G.} and {Kostrzewa-Rutkowska, Z.} and {Koubsky, P.} and {Lambert, S.} and {Lanza, A. F.} and {Lasne, Y.} and {Lavigne, J.-B.} and {Le Fustec, Y.} and {Le Poncin-Lafitte, C.} and {Lebreton, Y.} and {Leccia, S.} and {Leclerc, N.} and {Lecoeur-Taibi, I.} and {Lenhardt, H.} and {Leroux, F.} and {Liao, S.} and {Licata, E.} and {Lindstr\o{}m, H. E. P.} and {Lister, T. A.} and {Livanou, E.} and {Lobel, A.} and {L\'opez, M.} and {Managau, S.} and {Mann, R. G.} and {Mantelet, G.} and {Marchal, O.} and {Marchant, J. M.} and {Marconi, M.} and {Marinoni, S.} and {Marschalk\'o, G.} and {Marshall, D. J.} and {Martino, M.} and {Marton, G.} and {Mary, N.} and {Massari, D.} and {Matijevic, G.} and {Mazeh, T.} and {McMillan, P. J.} and {Messina, S.} and {Michalik, D.} and {Millar, N. R.} and {Molina, D.} and {Molinaro, R.} and {Moln\'ar, L.} and {Montegriffo, P.} and {Mor, R.} and {Morbidelli, R.} and {Morel, T.} and {Morris, D.} and {Mulone, A. F.} and {Muraveva, T.} and {Musella, I.} and {Nelemans, G.} and {Nicastro, L.} and {Noval, L.} and {O\'{}Mullane, W.} and {Ord\'enovic, C.} and {Ord\'o\~nez-Blanco, D.} and {Osborne, P.} and {Pagani, C.} and {Pagano, I.} and {Pailler, F.} and {Palacin, H.} and {Palaversa, L.} and {Panahi, A.} and {Pawlak, M.} and {Piersimoni, A. M.} and {Pineau, F.-X.} and {Plachy, E.} and {Plum, G.} and {Poggio, E.} and {Poujoulet, E.} and {Prsa, A.} and {Pulone, L.} and {Racero, E.} and {Ragaini, S.} and {Rambaux, N.} and {Ramos-Lerate, M.} and {Regibo, S.} and {Reyl\'e, C.} and {Riclet, F.} and {Ripepi, V.} and {Riva, A.} and {Rivard, A.} and {Rixon, G.} and {Roegiers, T.} and {Roelens, M.} and {Romero-G\'omez, M.} and {Rowell, N.} and {Royer, F.} and {Ruiz-Dern, L.} and {Sadowski, G.} and {Sagrist\`a Sell\'es, T.} and {Sahlmann, J.} and {Salgado, J.} and {Salguero, E.} and {Sanna, N.} and {Santana-Ros, T.} and {Sarasso, M.} and {Savietto, H.} and {Schultheis, M.} and {Sciacca, E.} and {Segol, M.} and {Segovia, J. C.} and {S\'egransan, D.} and {Shih, I-C.} and {Siltala, L.} and {Silva, A. F.} and {Smart, R. L.} and {Smith, K. W.} and {Solano, E.} and {Solitro, F.} and {Sordo, R.} and {Soria Nieto, S.} and {Souchay, J.} and {Spagna, A.} and {Spoto, F.} and {Stampa, U.} and {Steele, I. A.} and {Steidelm\"uller, H.} and {Stephenson, C. A.} and {Stoev, H.} and {Suess, F. F.} and {Surdej, J.} and {Szabados, L.} and {Szegedi-Elek, E.} and {Tapiador, D.} and {Taris, F.} and {Tauran, G.} and {Taylor, M. B.} and {Teixeira, R.} and {Terrett, D.} and {Teyssandier, P.} and {Thuillot, W.} and {Titarenko, A.} and {Torra Clotet, F.} and {Turon, C.} and {Ulla, A.} and {Utrilla, E.} and {Uzzi, S.} and {Vaillant, M.} and {Valentini, G.} and {Valette, V.} and {van Elteren, A.} and {Van Hemelryck, E.} and {van Leeuwen, M.} and {Vaschetto, M.} and {Vecchiato, A.} and {Veljanoski, J.} and {Viala, Y.} and {Vicente, D.} and {Vogt, S.} and {von Essen, C.} and {Voss, H.} and {Votruba, V.} and {Voutsinas, S.} and {Walmsley, G.} and {Weiler, M.} and {Wertz, O.} and {Wevers, T.} and {Wyrzykowski, L.} and {Yoldas, A.} and {Zerjal, M.} and {Ziaeepour, H.} and {Zorec, J.} and {Zschocke, S.} and {Zucker, S.} and {Zurbach, C.} and {Zwitter, T.}},
+	date-added = {2022-10-19 11:25:00 -0400},
+	date-modified = {2022-10-19 11:25:14 -0400},
+	doi = {10.1051/0004-6361/201833051},
+	journal = {A\&A},
+	pages = {A1},
+	title = {Gaia Data Release 2 - Summary of the contents and survey properties},
+	url = {https://doi.org/10.1051/0004-6361/201833051},
+	volume = 616,
+	year = 2018,
+	bdsk-url-1 = {https://doi.org/10.1051/0004-6361/201833051}}
+
+@article{myers2022,
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	adsurl = {https://ui.adsabs.harvard.edu/abs/2022arXiv220808518M},
+	archiveprefix = {arXiv},
+	author = {{Myers}, Adam D. and {Moustakas}, John and {Bailey}, Stephen and {Weaver}, Benjamin A. and {Cooper}, Andrew P. and {Forero-Romero}, Jaime E. and {Abolfathi}, Bela and {Alexander}, David M. and {Brooks}, David and {Chaussidon}, Edmond and {Chuang}, Chia-Hsun and {Dawson}, Kyle and {Dey}, Arjun and {Dey}, Biprateep and {Dhungana}, Govinda and {Doel}, Peter and {Fanning}, Kevin and {Gazta{\~n}aga}, Enrique and {Gontcho}, Satya Gontcho A and {Gonzalez-Morales}, Alma X. and {Hahn}, ChangHoon and {Herrera-Alcantar}, Hiram K. and {Honscheid}, Klaus and {Ishak}, Mustapha and {Karim}, Tanveer and {Kirkby}, David and {Kisner}, Theodore and {Koposov}, Sergey E. and {Kremin}, Anthony and {Lan}, Ting-Wen and {Landriau}, Martin and {Levi}, Michael E. and {Magneville}, Christophe and {Martini}, Paul and {Meisner}, Aaron and {Napolitano}, Lucas and {Newman}, Jeffrey A. and {Palanque-Delabrouille}, Nathalie and {Percival}, Will and {Poppett}, Claire and {Prada}, Francisco and {Raichoor}, Anand and {Ross}, Ashley J. and {Schlafly}, Edward F. and {Schubnell}, Michael and {Tan}, Ting and {Tarle}, Gregory and {Wilson}, Michael J. and {Y{\`e}che}, Christophe and {Zhou}, Rongpu and {Zhou}, Zhimin and {Zou}, Hu},
+	date-added = {2022-10-19 10:47:05 -0400},
+	date-modified = {2022-10-19 10:47:19 -0400},
+	eid = {arXiv:2208.08518},
+	eprint = {2208.08518},
+	journal = {arXiv e-prints},
+	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+	month = aug,
+	pages = {arXiv:2208.08518},
+	primaryclass = {astro-ph.IM},
+	title = {{The Target Selection Pipeline for the Dark Energy Spectroscopic Instrument}},
+	year = 2022}
 
 @article{slosar2008constraints,
 	author = {Slosar, An{\v{z}}e and Hirata, Christopher and Seljak, Uro{\v{s}} and Ho, Shirley and Padmanabhan, Nikhil},
