--- a/sections/results.tex
+++ b/sections/results.tex
@@ -1,5 +1,5 @@
 \section{Results}\label{sec:results}
-
+\mr{TODO: The mean density and cross power spectrum $\chi^{2}$ diagnostics do not reveal any signature of remaining systematic effects -- given all the available templates. But we could be missing some unknown maps. There are some calibration maps made by Aaron which I need to look into. I did not use the Gaia stellar map for training-- Zhou et al has a discussion on why it should not be used. But I plan to apply some cuts based on imaging (e.g., poor depth, high stellar density and extinction) to see if those impact the best fit estimates. Next, I will study how changing the lowest ell used could affect our results. }
 
 \subsection{Lognormal Mocks}
 
@@ -34,7 +34,7 @@ $\fnl=0$ / DESI  & log$C_{\ell}$   & $  0.47$& $  0.47$& $  0.08<\fnl<  0.85$& $
     \includegraphics[width=0.45\textwidth]{figures/mcmc_po100.pdf} 
     \includegraphics[width=0.45\textwidth]{figures/bestfit_zero.pdf} 
     \includegraphics[width=0.45\textwidth]{figures/bestfit_po100.pdf}         
-    \caption{68\% and 95\% confidence contours for $\fnl=0$ and $100$ mocks. bottom: best fit estimates.}\label{fig:mcmc_mocks}
+    \caption{Top: 68\% and 95\% confidence contours for $\fnl=0$ (left) and $100$ (right) mocks. Using the $\log C_{\ell}$ fitting yield constraints that are insensitive to the covariance used. Bottom: best fit estimates from fitting 1000 lognormal mocks with $\fnl=0$ (left) and $100$ (right) in the DESI footprint. The truth values are represented by vertical and horizontal lines, and the mean of best fit estimates are denoted by the red stars.}\label{fig:mcmc_mocks}
 \end{figure*}
 
 
@@ -69,7 +69,7 @@ DECaLS South [incl. DEC $< -30$]    &            & $ 56.93$& $ 60.83$& $ 39.20<\
 \begin{figure*}
     \centering
     \includegraphics[width=0.95\textwidth]{figures/model_dr9.pdf} 
-    \caption{Measured power spectrum of the DR9 LRG sample before and after correcting for systematics with their corresponding best fit theory predictions. The shade represents $1\sigma$ error on the mean power spectrum of mocks.}
+    \caption{Measured power spectrum of the DR9 LRG sample before and after correcting for systematics with their corresponding best fit theory predictions. The shade represents $1\sigma$ error constructed from the $\fnl=0$ mocks.}
     \label{fig:cl_dr9}
 \end{figure*}
 
